# persea-protocol

./: .gitignore  DEPLOYED_ADDRESSES.md  DEPLOY_GUIDE.md  INSTALL_FOUNDRY.md  LICENSE  PERSEA_Protocol_Whitepaper.docx  PLATFORM_GUIDE.md  README.md  VERCEL_DEPLOY.md  deploy.bat  install-foundry.ps1  package-lock.json  package.json  test_contracts.sh  vercel.json
backend/: .env.example  package.json  railway.json
backend/src/: db.ts  index.js  index.ts
backend/src/controllers/: batchController.ts  dataController.ts  marketController.ts  userController.ts
backend/src/middleware/: auth.ts
backend/src/models/: schema.ts
backend/src/routes/: auth.ts  batches.ts  data.ts  market.ts  users.ts
backend/src/services/: blockchain.ts  ipfs.ts
contracts/: .env.example  foundry.toml
contracts/script/: Deploy.s.sol  GrantRole.s.sol  SetupBuyer.s.sol  TestContracts.s.sol
contracts/src/: PerseaToken.sol  PitMarketContract.sol  SeedConsentContract.sol  SeedScoreContract.sol  SkinTraceContract.sol  Types.sol
contracts/test/: Persea.t.sol
frontend/: next.config.js  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: MyBatches.tsx  Navbar.tsx  Providers.tsx  PurchaseHistory.tsx  RegisterBatchForm.tsx  StatsCards.tsx
ml/: .env.example  pyproject.toml  run.py
ml/app/: classifier.py  main.py  schemas.py  test_main.py
mobile/: package.json
mobile/app/: _layout.tsx  index.tsx  register.tsx
mobile/config/: api.ts
mobile/store/: batchStore.ts
scripts/: package.json  setup-buyer.cjs
(+16 files in other folders)
